2001-06-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/glade/Makefile.am: new file

	* src/gnome/glade/commodity.glade: new file. glade file for
	commodity dialog

	* src/gnome/dialog-commodities.c: use libglade

	* src/gnome/dialog-utils.c (gnc_glade_xml_new): new func
	(gnc_glade_xml_new_widget): new func

	* rpm/gnucash.spec.in: add glade dir

	* configure.in: move libglade check to glade section.
	add configured glade file dir.

	* src/gnome/Makefile.am: add glade flags & glade dir

	* src/Makefile.am: add glade libs

	* src/scm/report/account-piecharts.scm: same as below

	* src/scm/report/category-barchart.scm: remove hint text

	* src/engine/gnc-book.c (gnc_book_get_file_lock): some filesystems
	don't support hard links. If the error code indicates this, go
	ahead and grant the lock. Is there a better way?

2001-06-11  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-date-picker.c
	(gnc_date_picker_key_event): fix bug

	* src/scm/Makefile.am: same as below

	* src/scm/price-quotes.scm: same as below

	* src/scm/process.scm: re-modulize process.scm

2001-06-10  Christian Stimming  <stimming@tuhh.de>

	* de.po: updated German translation.
	
	* configure.in, doc/sgml/Makefile.am, doc/sgml/de_DE/*: Added
	German translation of a few manual pages, including a Whats-New
	table for the translated words.

2001-06-10  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-print.sgml: fix docs

	* src/engine/gnc-engine-util.c: change debug levels to warning

2001-06-10  Bill Gribble  <grib@billgribble.com>

	* src/scm/report/welcome-to-gnucash.scm: fix bug in "welcome to
	gnucash" report

	* src/gnome/dialog-column-view.c: remove printout 
	
2001-06-09  Dave Peticolas  <dave@krondo.com>

	* configure.in: fix bug

	* doc/sgml/C/xacc-about.sgml: update credits

	* src/gnome/window-main.c (gnc_main_window_about_cb): update
	credits

	* AUTHORS: update credits

	* src/gnome/reconcile-list.c (gnc_reconcile_list_refresh): fix
	bugs
